fix layout bug with tech stacks in project details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header {
     width:100%;
     background-color:var(--background-dark);
     box-shadow:2px 2px 5px #14171a;
+    z-index:10;
 }
 
 nav {
@@ -178,6 +179,15 @@ h3 {
 
 .featured-project .description {
     background-color:var(--featured-accent-translucent);
+}
+
+.tech-stack {
+    list-style:none;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:flex-start;
+    gap:10px;
+    margin-top:3px;
 }
 
 a:link {
